Wed Jun  2 12:41:53 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_gets_m): set lastline ($_) even when read line is
	  nil.  [ruby-dev:23663]

Fri May 28 11:20:31 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_eval): bad influence on frame node.

	* eval.c (eval): reverted wrongly removed condition.  [ruby-dev:23638]

Thu May 27 21:37:50 2004  Tanaka Akira  <akr@m17n.org>

	* lib/pathname.rb (Pathname#initialize): fix pathname initialization
	  by pathname.

Thu May 27 20:02:09  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* io.c (rb_io_fwrite): check all case errno != 0 [ruby-dev:23648]

Thu May 27 15:54:02 2004  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (MDTM_REGEXP): fix for demon's ftp server.
	Thanks, Rutger Nijlunsing.

Thu May 27 14:53:13 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* io.c (rb_io_fwrite): workaround for bcc32's fwrite bug.
	  add errno checking.  [ruby-dev:23627]

	* io.c (rb_io_fwrite): should check if errno == ENOENT, too.

Thu May 27 11:25:03 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/csv/test_csv.rb: illegal require module name (../lib/csv.rb).

Wed May 26 23:12:13 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/csv.rb (CSV.read, CSV.readlines): added.  works as IO.read and
	  IO.readlines in CSV format.

	* lib/csv.rb (CSV.parse): [CAUTION] behavior changed.  in the past,
	  CSV.parse accepts a filename to be read-opened (it was just a
	  shortcut of CSV.open(filename, 'r')).  now CSV.parse accepts a
	  string or a stream to be parsed e.g.
	  CSV.parse("1,2\n3,r") #=> [['1', '2'], ['3', '4']]

	* test/csv/test_csv.rb: follow above changes.

Wed May 26 14:19:42 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_eval, eval): make line number consistent on eval with
	  Proc.  [ruby-talk:101253]

Wed May 26 13:59:17 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/parsers/parse_rb.rb (RDoc::RubyParser::skip_for_variable): Allow for
	  'do' after for statement
